# Assistant

./: .gitignore  DS_HW02_02.ipynb  README.md
personal_assistant/: classes.puml  dockerfile  exception.py  files_manager.py  menu.py  note_book.py  phone_book.py  phone_bot.py  pyproject.toml  weather.py
personal_assistant/myenv/: pyvenv.cfg
personal_assistant/myenv/Scripts/: activate  activate.bat  get_objgraph  undill
