[tool.poetry]
name = "personal-assistant"
version = "0.2.1"
description = ""
authors = ["anton-akulenko <anton.htl@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.10.11"
requests = "2.28.2"
bs4 = "0.0.1"
prettytable = "3.6.0"
prompt-toolkit = "3.0.38"
pathlib = "1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
